# grasp-mining

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  default.nix  derivation.nix  flake.nix  overlay.nix  results_noloc.txt
cmake/: StandardProjectSettings.cmake  compiler.cmake
doc/: backlog.txt  code-edit.md  completed.txt  current.txt  debug.md  dev-build.md  manual-build.md  nix-build.md
instances/: abz9.txt  instances_name.txt  laar_test.txt  swv03.txt  swv04.txt  swv06.txt  swv07.txt  swv08.txt  swv09.txt  swv10.txt  yn1.txt  yn2.txt  yn3.txt  yn4.txt
results/: JSFF_Results.csv  JSFF_Results_light.csv  readme.txt  ~$résultatsJS.xlsx
src/: Global.h  Main.cpp  grasp.cpp  grasp_miner.cpp  main.cpp
src/const-heuristic/: binato_heuristic.cpp  binato_heuristic.h  candidate_generator.cpp  candidate_generator.h  candidate_selector.cpp  candidate_selector.h  const_heuristic.cpp  const_heuristic.h  greedy_generator.cpp  greedy_generator.h  hybrid_generator.cpp  hybrid_generator.h  hybrid_heuristic.h  random_placement.cpp  random_placement.h  random_selector.cpp  random_selector.h  restricted_selector.cpp  restricted_selector.h  scheduled_generator.cpp  scheduled_generator.h
src/data/: bierwirth_sequence.cpp  bierwirth_sequence.h  problem.cpp  problem.h  solution.cpp  solution.h  solution_impl.cpp  solution_impl.h  typedefs.h
src/fpgrowth/: CMakeLists.txt  buffer.cpp  common.h  data.cpp  data.h  fp_tree.cpp  fp_tree.h  fpmax.cpp  fpmax.h  fsout.cpp  fsout.h  main.cpp  sort.h
src/lcmfim/: CMakeLists.txt  lcm_max.c  lcm_max.h  trsact.c
src/local-search/: empty_search.cpp  empty_search.h  laarhoven.cpp  laarhoven.h  laarhoven_search.cpp  laarhoven_search.h  local_search.cpp  local_search.h
src/miner/: data_miner.h  empty_miner.cpp  empty_miner.h  median_filter.cpp  median_filter.h  median_selector.cpp  median_selector.h  pair_patterns.h  pattern_miner.cpp  pattern_miner.h  selector.h  solution_filter.h  transaction_encoder.cpp  transaction_encoder.h
src/otherfim/: CMakeLists.txt  lcm_max.c  lib_e.c  makefile
src/solver/: solver.cpp  solver.h  solver_factory.cpp  solver_factory.h  solver_module.h
src/util/: out_js.cpp  out_js.h
tests/: binato_test.cpp  const_heuristic_test.cpp  encoder_test.cpp  fim_instance.txt  fim_test.cpp  fp_sort.cpp  hybrid_generator_test.cpp  laarhoven_test.cpp  lcm_test.cpp  problem_test.cpp  solution_filter_test.cpp  solution_test.cpp
